--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html class=" js no-touch backgroundsize csstransforms3d csstransitions csstransforms" lang="en">
-<!--<![endif]-->
 
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -11,8 +10,6 @@
   <!--main style-->
   <link rel="stylesheet" type="text/css" media="screen" href="./css/bootstrap.css">
   <link rel="stylesheet" type="text/css" media="screen" href="./css/style.css">
-  <!-- slider style-->
-  <link rel="stylesheet" type="text/css" href="./css/slideshow.css">
   <!--google font style-->
   <link href="./css/css" rel="stylesheet" type="text/css">
   <!-- font style-->
@@ -46,49 +43,9 @@
         <h1>Élodie Lefevre</h1>
         <h2>Étudiante en informatique - Administratrice Système & réseaux</h2>
       </div>
-      <!--menu start-->
 
-      <div class="menu">
-        <div class="navbar-wrapper stuckMenu">
-          <div class="container">
-            <div class="navwrapper">
-              <div class="navbar navbar-inverse navbar-static-top">
-                <div class="container">
-                  <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                      <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="#">Menu</a>
-                  </div>
-                  <div class="navbar-collapse collapse">
-                    <ul class="nav navbar-nav">
-                      <li class="menuItem active"><a href="#wrapper">Accueil</a></li>
-                      <li class="menuItem"><a href="#aboutme">À propos de moi</a></li>
-                      <li class="menuItem"><a href="#technical">Compétences</a></li>
-                      <li class="menuItem dropdown">
-                        <a class="dropdown-toggle" href="#" id="dropdownMenuLink" data-toggle="dropdown">Projets</a>
-                        <div class="dropdown-menu projet" aria-labelledby="dropdownMenuLink">
-                          <a class="menuItem nosProjet" href="projet1ereAnnee.html">Projet 1ère année</a>
-                          <a class="menuItem nosProjet" href="projet2emeAnnee.html">Projet 2ème année</a>
-                          <div class="dropdown-divider"></div>
-                          <a class="menuItem nosProjet" href="projetCours.html">Projet de cours</a>
-                        </div>
-                      </li>
-                      <li>
-                        <a class="menuItem" href="veilleTechnologique.html">Veille technologique</a>
-                      </li>
-                      <li class="menuItem"><a href="#education">Diplômes</a></li>
-                      <li class="menuItem"><a href="#contact">Me contacter</a></li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <!-- End Navbar -->
-          </div>
-        </div>
-      </div>
-      <!--menu end-->
+      <!-- MENU -->
+      <div data-include="menu"></div>
     </header>
     <!--about me start-->
     <section class="aboutme" id="aboutme">
@@ -271,75 +228,22 @@
   </section>
   <!--contact end-->
   <!--footer start-->
-  <section class="footer" id="footer">
-    <div class="container">
-      <ul>
+  <div data-include="footer"></div>
 
-        <p style="text-align: center;"> © 2022 , Tout droit réservé </p>
-      </ul>
-    </div>
-  </section>
-  <!--footer end-->
   </div>
-  <!--wrapper end-->
-  <!--modernizr js-->
   <script type="text/javascript" src="./js/modernizr.custom.26633.js"></script>
-  <!--jquary min js-->
   <script type="text/javascript" src="./js/jquery.min.js"></script>
   <script src="./js/bootstrap.js"></script>
   <script type="text/javascript" src="./js/jquery.gridrotator.js"></script>
-  <!--for custom jquary-->
   <script src="./js/custom.js"></script>
-  <!--for placeholder jquary-->
+
   <script type="text/javascript" src="./js/jquery.placeholder.js"></script>
-  <!--for menu jquary-->
-  <script type="text/javascript" src="./js/stickUp.js"></script>
-  <script type="text/javascript">
-    jQuery(function ($) {
-      $(document).ready(function () {
-        //enabling stickUp on the '.navbar-wrapper' class
-        $('.navbar-wrapper').stickUp({
-          parts: {
-            0: 'banner',
-            1: 'aboutme',
-            2: 'technical',
-            3: 'exprience',
-            4: 'education',
-            5: 'contact'
-          },
-          itemClass: 'menuItem',
-          itemHover: 'active',
-          topMargin: 'auto'
-        });
-      });
 
-      $(".navbar.navbar-inverse.navbar-static-top a").click(function () {
-        $(".navbar-collapse").addClass("hideClass");
-      });
-
-
-      $(".navbar.navbar-inverse.navbar-static-top a").click(function () {
-        $(".navbar-collapse").addClass("collapse");
-      });
-
-
-      $(".navbar.navbar-inverse.navbar-static-top a").click(function () {
-        $(".navbar-collapse").removeClass("in");
-      });
-
-      $(".navbar-toggle").click(function () {
-        $(".navbar-collapse").removeClass("hideClass");
-      });
-
-
-    });
-
-  </script>
   <!--for portfoli filter jquary-->
   <script src="./js/jquery.isotope.js" type="text/javascript"></script>
   <!--for portfoli lightbox -->
-  <link type="text/css" rel="stylesheet" id="theme" href="./js/jquery-ui-1.8.16.custom.css">
-  <link type="text/css" rel="stylesheet" href="./js/lightbox.min.css">
+  <link type="text/css" rel="stylesheet" id="theme" href="./css/jquery-ui-1.8.16.custom.css">
+  <link type="text/css" rel="stylesheet" href="./css/lightbox.min.css">
   <script type="text/javascript" src="./js/jquery.ui.widget.min.js"></script>
   <script type="text/javascript" src="./js/jquery.ui.rlightbox.js"></script>
   <!--for skill chat jquary-->
@@ -347,6 +251,16 @@
   <script src="./js/jquery.easypiechart.js"></script>
   <!--contact form js-->
   <script type="text/javascript" src="./js/jquery.contact.js"></script>
+
+  <script>
+    $(function () {
+      var includes = $('[data-include]')
+      $.each(includes, function () {
+        var file = $(this).data('include') + '.html'
+        $(this).load(file)
+      })
+    })
+  </script>
 
 </body>
 
