--- a/atelierPro1.html
+++ b/atelierPro1.html
@@ -24,7 +24,7 @@
           <li><span></span></li>
           <li><span></span></li>
         </ul>
-        <img class="imgHeaderIndex" src="img/iStock-1126779135-1024x573.jpeg">
+        <img class="imgHeaderIndex" src="img/image03.png">
       </div>
     </div>
 
@@ -38,45 +38,21 @@
     <div data-include="menu"></div>
 
     <div class="container">
-      <div class="row">
+        <div class="row">
 
+            <video width="100%" height="100%" controls>
+                <source src="./Fichier/Atelier1.mp4" type="video/mp4">
+                Votre explorer ne supporte pas les vidéos
+            </video>
 
-        <div>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam et arcu nunc. Nullam sit amet molestie
-          ligula, id iaculis mauris. Nulla id orci sed lorem dapibus dignissim. Aliquam tristique eros sit amet justo
-          dignissim mollis. Nam quam mi, maximus vitae neque at, pretium iaculis dui. Mauris porttitor sollicitudin
-          volutpat. Aenean aliquam dolor ut lacinia pulvinar. Curabitur feugiat tincidunt quam. Integer eu neque ac
-          tellus maximus convallis vulputate ut dui. Proin congue felis eget ligula efficitur, vitae convallis ex
-          varius. Vivamus interdum magna massa, eu feugiat est faucibus quis. Duis fermentum lectus sed dui ornare
-          semper. In hac habitasse platea dictumst. Duis vel dictum nibh, eu iaculis nunc. Integer nec vulputate ante.
-          Sed at cursus libero.
+            <div class="pdfE4">
+                <object type="application/pdf" data="./Fichier/DossierDocumentaire.pdf#toolbar=0&scrollbar=0" height="1100px"
+                        width="800px"></object>
+            </div>
 
-          Maecenas a aliquam ex. Vestibulum eu sem sed sapien commodo mollis non nec libero. Pellentesque tempus cursus
-          tincidunt. Donec nec porttitor ante. Mauris vitae pharetra justo, quis vulputate magna. Integer tempor quis
-          dolor sit amet hendrerit. Suspendisse semper lectus eu nulla consectetur, malesuada hendrerit magna lobortis.
+            <img class="imageE4" src="Fichier/EasyCapture1.png">
 
-          Aenean risus ligula, commodo sit amet enim nec, finibus dapibus libero. Phasellus interdum congue ipsum in
-          maximus. Etiam vel nisl nec ligula pellentesque efficitur at ac urna. Interdum et malesuada fames ac ante
-          ipsum primis in faucibus. Proin ullamcorper convallis mi nec iaculis. Maecenas ornare nunc eget volutpat
-          convallis. Aenean sodales, erat sed tincidunt tempor, diam augue tempus tortor, eget convallis nunc metus ut
-          elit.
-
-          Fusce vulputate libero risus, commodo semper libero vestibulum ut. Donec in ex non augue placerat semper vel
-          et mi. Mauris convallis eu tellus ac bibendum. Proin congue elementum dui id pretium. Suspendisse at mi ipsum.
-          Donec ac justo neque. Aenean ex massa, venenatis at leo nec, accumsan gravida augue. Suspendisse a tortor
-          molestie, pretium nisl egestas, bibendum neque. Ut vel dignissim ante. Nulla commodo, est a egestas tempor,
-          neque nunc ornare lacus, eget luctus sem tellus at urna. Nulla rutrum justo sem, at accumsan nisi vulputate a.
-          Fusce quis imperdiet nulla. Donec imperdiet vel ligula id consectetur. Aenean non placerat odio. Cras aliquet
-          erat est, non pellentesque tellus congue quis. Curabitur ullamcorper metus sit amet euismod dictum.
-
-          Curabitur condimentum vel mauris ac tincidunt. Mauris dignissim, felis non faucibus venenatis, neque enim
-          molestie mi, ac porttitor nibh quam quis turpis. Praesent sollicitudin iaculis velit, sollicitudin pharetra mi
-          varius et. Maecenas cursus erat elit, vel dapibus sapien tempus pulvinar. Ut posuere dui vitae nisl pharetra,
-          in pulvinar est ultricies. Praesent feugiat tincidunt eros maximus efficitur. Sed pellentesque leo a sapien
-          varius aliquam. Vivamus leo nunc, consectetur et quam sed, rhoncus bibendum diam.
         </div>
-
-      </div>
     </div>
   </div>
   <div data-include="footer"></div>
