--- a/atelierPro2.html
+++ b/atelierPro2.html
@@ -19,14 +19,15 @@
 
 <body>
   <div class="wrapper project1ereAnneeContenus">
-    <div class="banner row" id="banner" style="width: 1864px; height: 917px;">
-      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 noPadd" style="height:100%">
-        <ul class="cb-slideshow">
-          <li><span></span></li>
-          <li><span></span></li>
-          <li><span></span></li>
-        </ul>
-      </div>
+    <div class="banner row" id="banner" style="width: 100%; height: 917px;">
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 noPadd" style="height:100%">
+            <ul class="cb-slideshow">
+                <li><span></span></li>
+                <li><span></span></li>
+                <li><span></span></li>
+            </ul>
+            <img class="imgHeaderIndex" src="img/image03.png">
+        </div>
     </div>
 
     <div class="bannerText container">
@@ -38,47 +39,29 @@
       <div data-include="menu"></div>
       <div class="container">
         <div class="row">
-          <div>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam et arcu nunc. Nullam sit amet molestie
-            ligula, id iaculis mauris. Nulla id orci sed lorem dapibus dignissim. Aliquam tristique eros sit amet justo
-            dignissim mollis. Nam quam mi, maximus vitae neque at, pretium iaculis dui. Mauris porttitor sollicitudin
-            volutpat. Aenean aliquam dolor ut lacinia pulvinar. Curabitur feugiat tincidunt quam. Integer eu neque ac
-            tellus maximus convallis vulputate ut dui. Proin congue felis eget ligula efficitur, vitae convallis ex
-            varius. Vivamus interdum magna massa, eu feugiat est faucibus quis. Duis fermentum lectus sed dui ornare
-            semper. In hac habitasse platea dictumst. Duis vel dictum nibh, eu iaculis nunc. Integer nec vulputate ante.
-            Sed at cursus libero.
+            <div>
 
-            Maecenas a aliquam ex. Vestibulum eu sem sed sapien commodo mollis non nec libero. Pellentesque tempus
-            cursus
-            tincidunt. Donec nec porttitor ante. Mauris vitae pharetra justo, quis vulputate magna. Integer tempor quis
-            dolor sit amet hendrerit. Suspendisse semper lectus eu nulla consectetur, malesuada hendrerit magna
-            lobortis.
+                <video width="100%" height="100%" controls>
+                    <source src="./Fichier/Atelier2.mp4" type="video/mp4">
+                    Votre explorer ne supporte pas les vidéos
+                </video>
 
-            Aenean risus ligula, commodo sit amet enim nec, finibus dapibus libero. Phasellus interdum congue ipsum in
-            maximus. Etiam vel nisl nec ligula pellentesque efficitur at ac urna. Interdum et malesuada fames ac ante
-            ipsum primis in faucibus. Proin ullamcorper convallis mi nec iaculis. Maecenas ornare nunc eget volutpat
-            convallis. Aenean sodales, erat sed tincidunt tempor, diam augue tempus tortor, eget convallis nunc metus ut
-            elit.
+                <div class="pdfE4">
+                    <object type="application/pdf" data="./Fichier/DossierDocumentaire2.pdf#toolbar=0&scrollbar=0" height="1100px"
+                            width="800px"></object>
+                </div>
 
-            Fusce vulputate libero risus, commodo semper libero vestibulum ut. Donec in ex non augue placerat semper vel
-            et mi. Mauris convallis eu tellus ac bibendum. Proin congue elementum dui id pretium. Suspendisse at mi
-            ipsum.
-            Donec ac justo neque. Aenean ex massa, venenatis at leo nec, accumsan gravida augue. Suspendisse a tortor
-            molestie, pretium nisl egestas, bibendum neque. Ut vel dignissim ante. Nulla commodo, est a egestas tempor,
-            neque nunc ornare lacus, eget luctus sem tellus at urna. Nulla rutrum justo sem, at accumsan nisi vulputate
-            a.
-            Fusce quis imperdiet nulla. Donec imperdiet vel ligula id consectetur. Aenean non placerat odio. Cras
-            aliquet
-            erat est, non pellentesque tellus congue quis. Curabitur ullamcorper metus sit amet euismod dictum.
+                <div class="pdfE4">
+                    <object type="application/pdf" data="./Fichier/AffectationDesDroits.pdf#toolbar=0&scrollbar=0" height="1100px"
+                            width="800px"></object>
+                </div>
 
-            Curabitur condimentum vel mauris ac tincidunt. Mauris dignissim, felis non faucibus venenatis, neque enim
-            molestie mi, ac porttitor nibh quam quis turpis. Praesent sollicitudin iaculis velit, sollicitudin pharetra
-            mi
-            varius et. Maecenas cursus erat elit, vel dapibus sapien tempus pulvinar. Ut posuere dui vitae nisl
-            pharetra,
-            in pulvinar est ultricies. Praesent feugiat tincidunt eros maximus efficitur. Sed pellentesque leo a sapien
-            varius aliquam. Vivamus leo nunc, consectetur et quam sed, rhoncus bibendum diam.
-          </div>
+                <div class="pdfE4">
+                    <object type="application/pdf" data="./Fichier/Utilisateurs.pdf#toolbar=0&scrollbar=0" height="1100px"
+                            width="800px"></object>
+                </div>
+
+            </div>
         </div>
       </div>
 
