--- a/atelierPro3.html
+++ b/atelierPro3.html
@@ -20,13 +20,14 @@
 <body>
   <div class="wrapper project1ereAnneeContenus">
     <div class="banner row" id="banner" style="width: 1864px; height: 917px;">
-      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 noPadd" style="height:100%">
-        <ul class="cb-slideshow">
-          <li><span></span></li>
-          <li><span></span></li>
-          <li><span></span></li>
-        </ul>
-      </div>
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 noPadd" style="height:100%">
+            <ul class="cb-slideshow">
+                <li><span></span></li>
+                <li><span></span></li>
+                <li><span></span></li>
+            </ul>
+            <img class="imgHeaderIndex" src="img/image03.png">
+        </div>
     </div>
 
     <div class="bannerText container">
