--- a/epreuveE4.html
+++ b/epreuveE4.html
@@ -24,7 +24,7 @@
           <li><span></span></li>
           <li><span></span></li>
         </ul>
-        <img class="imgHeaderIndex" src="img/50fa1bf0d5_50161374_test-ordinateur-portable.jpg">
+        <img class="imgHeaderIndex" src="img/image02.jpg">
       </div>
     </div>
 
@@ -37,44 +37,39 @@
 
 
     <div class="container">
-      <div class="row">
-        <div class="col-md-12">
+        <div class="row">
+            <div class="col-md-12">
 
-          <h4><u>Mon résumé concernant mon premier stage en Entreprise</u></h4>
-
-          <br>
-          <h5>
-            Mon premier stage a été réalisé dans L'hôpital de Saint-Quentin dans le service Informatique. On m'a
-            confié un projet de supervision « PRTG »
-            pour régler les erreurs mais surtout remettre de l'ordre dans le parc informatique.
-            J'ai enlevé les capteurs de certificat SSL car c'était en interne donc il n'avait plus besoin d'être dans
-            le parc informatique mais aussi les capteurs HTTP
-            en remplaçant par des capteurs HTTPS. J'ai été chargé également de m'occuper de mettre des capteurs sur
-            des services d'impression dans leur cas « Spouleur d'impression ».
-            J'ai dû également mettre des capteurs sur les capacités de l'ordinateur (Disques Durs,RAM, Processeur)
-            pour prévenir si les performances étaient trop utilisées pour envoyer une alerte au bout d'un certain
-            seuil d'avertissement.
-            Après avoir mis tous les capteurs qu'on a pu me demander, j'ai réglé les alertes par ma propre initiative
-            avec deux seuils d'avertissement avec un message en disant « Attention » avec un seuil à 60% d'utilisation
-            et un autre avec 90% « disque trop remplie, faite attention ».
-            J'ai mis les alertes pour les deux Administrateurs réseaux, et j'ai fait des documentations complètes
-            concernant les serveurs non sutilisés, les problèmes que j'ai rencontrés, et les choses à améliorer dans
-            le futur.
-          </h5>
+            </div>
         </div>
-      </div>
-      <br>
-      <div class="pdfE4">
-        <object type="application/pdf" data="./Fichier/PRTG.pdf#toolbar=0&scrollbar=0" height="1100px"
-          width="800px"></object>
-      </div>
-<br><br><br>
-      <h4><u>Mon résumé concernant mon second stage en Entreprise</u></h4>
+        <br>
 
-      <div class="pdfE4">
-        <object type="application/pdf" data="./Fichier/AWS.pdf#toolbar=0&scrollbar=0" height="1100px"
-          width="800px"></object>
-      </div>
+        <div class="pdfE4">
+            <object type="application/pdf" data="./Fichier/EpreuveE4.pdf#toolbar=0&scrollbar=0" height="1100px"
+                    width="800px"></object>
+        </div>
+
+        <div class="pdfE4">
+            <object type="application/pdf" data="./Fichier/AttestationDeStage1.pdf#toolbar=0&scrollbar=0" height="1100px"
+                    width="800px"></object>
+        </div>
+
+        <div class="pdfE4">
+            <object type="application/pdf" data="./Fichier/AttestationDeStage2.pdf#toolbar=0&scrollbar=0" height="1100px"
+                    width="800px"></object>
+        </div>
+
+        <div class="pdfE4">
+            <object type="application/pdf" data="./Fichier/PRTG.pdf#toolbar=0&scrollbar=0" height="1100px"
+                    width="800px"></object>
+        </div>
+        <br><br><br>
+        <h4><u>Mon résumé concernant mon second stage en Entreprise</u></h4>
+
+        <div class="pdfE4">
+            <object type="application/pdf" data="./Fichier/AWS.pdf#toolbar=0&scrollbar=0" height="1100px"
+                    width="800px"></object>
+        </div>
 
     </div>
     <br>
