--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <div class="wrapper" id="wrapper">
     <header>
       <!--banner start-->
-      <div class="banner row" id="banner" style="width: 1864px; height: 917px;">
+      <div class="banner row" id="banner" style="width: 100%; height: 100%;">
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 noPadd" style="height:100%">
           <!--background slide show start-->
           <ul class="cb-slideshow">
@@ -33,7 +33,7 @@
             <li><span></span></li>
             <li><span></span></li>
           </ul>
-          <img class="imgHeaderIndex" src="img/istockphoto-1093508248-170667a.jpg">
+          <img class="imgHeaderIndex" src="img/image06.jpg">
 
           <!--background slide show end-->
         </div>
