--- a/epreuveE5.html
+++ b/epreuveE5.html
@@ -48,6 +48,17 @@
                         width="800px"></object>
             </div>
 
+            <div data-include="footer"></div>
+
+            <!--jquary min js-->
+            <script type="text/javascript" src="./js/jquery.min.js"></script>
+            <script src="./js/bootstrap.js"></script>
+
+            <link type="text/css" rel="stylesheet" id="theme" href="./css/jquery-ui-1.8.16.custom.css">
+            <link type="text/css" rel="stylesheet" href="./css/lightbox.min.css">
+
+            <script type="text/javascript" src="./js/jquery.min.js"></script>
+
             <script>
                 $(function () {
                     var includes = $('[data-include]')
@@ -57,3 +68,5 @@
                     })
                 })
             </script>
+
+</body>
