--- a/epreuveE4.html
+++ b/epreuveE4.html
@@ -45,7 +45,7 @@
         <br>
 
         <div class="pdfE4">
-            <object type="application/pdf" data="./Fichier/EpreuveE4.pdf#toolbar=0&scrollbar=0" height="1100px"
+            <object type="application/pdf" data="./Fichier/EpreuveE4.xls#toolbar=0&scrollbar=0" height="1100px"
                     width="800px"></object>
         </div>
 
