--- a/epreuveE5.html
+++ b/epreuveE5.html
@@ -44,7 +44,12 @@
             <br>
 
             <div class="pdfE4">
-                <object type="application/pdf" data="./Fichier/FicheDescriptive.pdf#toolbar=0&scrollbar=0" height="1100px"
+                <object type="application/pdf" data="./Fichier/FicheDescriptive1.pdf#toolbar=0&scrollbar=0" height="1100px"
+                        width="800px"></object>
+            </div>
+
+            <div class="pdfE4">
+                <object type="application/pdf" data="./Fichier/FicheDescriptive2.pdf#toolbar=0&scrollbar=0" height="1100px"
                         width="800px"></object>
             </div>
 
