--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>Élodie Lefevre - Administratrice Réseau</title>
+  <title>Élodie Lefèvre - Administratrice Réseau</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!--main style-->
   <link rel="stylesheet" type="text/css" media="screen" href="./css/bootstrap.css">
@@ -40,7 +40,7 @@
       </div>
       <!--banner end-->
       <div class="bannerText container">
-        <h1>Élodie Lefevre</h1>
+        <h1>Élodie Lefèvre</h1>
         <h2>Étudiante en informatique - Administratrice Système & réseaux</h2>
       </div>
 
@@ -59,17 +59,17 @@
             <h4 class="subHeading">Étudiante en informatique - Administration Système & Réseau</h4>
             <div class="col-md-6">
               <p style="text-align:justify;">
-                Je m'apelle Elodie Lefèvre , j'ai 26 ans .</p>
-              <p>Je suis actuellement en cours d'acquisition d'un BTS SIO Option SISR (Solutions d'infrastructure,
+                Je m'apelle Elodie Lefèvre , j'ai 27 ans .</p>
+              <p>Je suis actuellement en cours d'acquisition d'un BTS SIO Option SISR (Solutions d'infrastructures,
                 systèmes et réseaux) au sein de l'école de Poitiers.</p>
-              <p>Interessée depuis toujours dans l'informatique, je souhaite continuer dans cette voie pour me
-                spécialiser en Administration Système & Réseaux où devenir Experte en Cybersécurité.</p>
-              <p>Ce portfolio a pour objectif de vous exposer mon cursus, mes compétences et mes projets professionnel
+              <p>Intéressée depuis toujours pour l'informatique, je souhaite continuer dans cette voie pour me
+                spécialiser en administration système & Réseaux où devenir Experte en Cybersécurité.</p>
+              <p>Ce portfolio a pour objectif de vous exposer mon cursus, mes compétences et mes projets professionnels
                 réalisés en entreprise et en formation.</p>
             </div>
             <div class="col-md-6">
               <p>Dans la partie projets, vous trouverez tous les projets réalisés durant les 2 ans de formation.</p>
-              <p>Certaines informations liées à la documentation des stages sont cachés pour des raisons de sécurité et
+              <p>Certaines informations liées à la documentation des stages sont cachées pour des raisons de sécurité et
                 confidentialité.</p>
             </div>
           </div>
@@ -109,7 +109,7 @@
             <div class=" col-xs-12 col-sm-6 col-md-6 col-lg-6 skills"> <span class="chart skilBg" data-percent="30">
                 <span class="percent"></span> </span>
               <h4>Virtualisation</h4>
-              <p>VirtualBox</p>
+              <p>Virtualbox/VMWare</p>
             </div>
           </div>
           <div class=" col-xs-12 col-sm-4 col-md-4 col-lg-4 skillsArea">
@@ -130,7 +130,7 @@
             <div class=" col-xs-12 col-sm-6 col-md-6 col-lg-6 skills"> <span class="chart skilBg" data-percent="30">
                 <span class="percent"></span> </span>
               <h4>Cisco Packet Tracer</h4>
-              <p>Routeurs / Switchs / Wi-Fi / DHCP / DNS</p>
+              <p>Routeurs / Switchs / Serveurs / Wi-Fi / DHCP / DNS / VLAN / HSRP / Spanning Tree / Inter vlan /RIP / OSPF</p>
             </div>
           </div>
           <div class=" col-xs-12 col-sm-4 col-md-4 col-lg-4 skillsArea">
@@ -144,7 +144,7 @@
             <div class=" col-xs-12 col-sm-6 col-md-6 col-lg-6 skills"> <span class="chart skilBg" data-percent="30">
                 <span class="percent"></span> </span>
               <h4>PFSence</h4>
-              <p>Configuration de Firewalls / NAT / Règles</p>
+              <p>Configuration de Firewalls / NAT / Règles entrantes et sortantes</p>
             </div>
           </div>
         </div>
