--- a/veilleTechnologique.html
+++ b/veilleTechnologique.html
@@ -26,7 +26,7 @@
                     <li><span></span></li>
                 </ul>
 
-                <img class="imgHeaderIndex" src="Image01.png">
+                <img class="imgHeaderIndex" src="./img/Image01.png">
             </div>
         </div>
 
