--- a/atelierPro3.html
+++ b/atelierPro3.html
@@ -42,17 +42,22 @@
         <div class="row">
             <div>
 
-                <video width="100%" height="100%" controls>
-                    <source src="./Fichier/Atelier3.mp4" type="video/mp4">
-                    Votre explorer ne supporte pas les vidéos
-                </video>
+
 
                 <div class="pdfE4">
-                    <object type="application/pdf" data="./Fichier/DossierDocumentaire3.pdf#toolbar=0&scrollbar=0" height="1100px"
+                    <object type="application/pdf" data="./Fichier/InstallationOCSInventory.pdf#toolbar=0&scrollbar=0" height="1100px"
                             width="800px"></object>
                 </div>
 
-                <img class="imageE4" src="Fichier/EasyCapture2.png">
+                <div class="pdfE4">
+                    <object type="application/pdf" data="./Fichier/InstallationGLPI.pdf#toolbar=0&scrollbar=0" height="1100px"
+                            width="800px"></object>
+                </div>
+
+                <div class="pdfE4">
+                    <object type="application/pdf" data="./Fichier/UtilisateurGLPI.pdf#toolbar=0&scrollbar=0" height="1100px"
+                            width="800px"></object>
+                </div>
 
 
             </div>
